--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -15,11 +15,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-
     <ClCompile Include="Bitmappedfont.cpp" />
-
     <ClCompile Include="CourseWall.cpp" />
-
     <ClCompile Include="DriftEffect.cpp" />
     <ClCompile Include="engine\math\DrawFunction.cpp" />
     <ClCompile Include="engine\Tool\Camera.cpp" />
@@ -42,6 +39,7 @@
     <ClCompile Include="engine\GAME\GameEngine.cpp" />
     <ClCompile Include="engine\scene\GameScene.cpp" />
     <ClCompile Include="Goal.cpp" />
+    <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="main.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Development|x64'">MaxSpeed</Optimization>
       <WholeProgramOptimization Condition="'$(Configuration)|$(Platform)'=='Development|x64'">true</WholeProgramOptimization>
@@ -79,11 +77,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractSceneFactory.h" />
-
     <ClInclude Include="Bitmappedfont.h" />
-
     <ClInclude Include="CourseWall.h" />
-
     <ClInclude Include="DriftEffect.h" />
     <ClInclude Include="engine\math\DrawFunction.h" />
     <ClInclude Include="engine\Tool\Camera.h" />
@@ -124,6 +119,7 @@
     <ClInclude Include="engine\scene\SceneManager.h" />
     <ClInclude Include="engine\scene\TitleScene.h" />
     <ClInclude Include="Goal.h" />
+    <ClInclude Include="LightManager.h" />
     <ClInclude Include="MapChipField.h" />
     <ClInclude Include="MoveEffect.h" />
     <ClInclude Include="Obstacle.h" />
