--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -18,7 +18,9 @@
     <ClCompile Include="Bitmappedfont.cpp" />
     <ClCompile Include="CourseWall.cpp" />
     <ClCompile Include="DriftEffect.cpp" />
+    <ClCompile Include="engine\base\PSOMnager.cpp" />
     <ClCompile Include="engine\math\DrawFunction.cpp" />
+    <ClCompile Include="engine\scene\SceneFactory.cpp" />
     <ClCompile Include="engine\Tool\Camera.cpp" />
     <ClCompile Include="engine\2d\Vector2.cpp" />
     <ClCompile Include="engine\3d\Vector3.cpp" />
@@ -70,8 +72,6 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rand.cpp" />
     <ClCompile Include="RotateArrow.cpp" />
-    <ClCompile Include="PSOMnager.cpp" />
-    <ClCompile Include="SceneFactory.cpp" />
     <ClCompile Include="Score.cpp" />
     <ClCompile Include="SpeedMeter.cpp" />
   </ItemGroup>
@@ -80,7 +80,9 @@
     <ClInclude Include="Bitmappedfont.h" />
     <ClInclude Include="CourseWall.h" />
     <ClInclude Include="DriftEffect.h" />
+    <ClInclude Include="engine\base\PSOMnager.h" />
     <ClInclude Include="engine\math\DrawFunction.h" />
+    <ClInclude Include="engine\scene\SceneFactory.h" />
     <ClInclude Include="engine\Tool\Camera.h" />
     <ClInclude Include="engine\2d\Vector2.h" />
     <ClInclude Include="engine\3d\Vector3.h" />
@@ -130,8 +132,6 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rand.h" />
     <ClInclude Include="RotateArrow.h" />
-    <ClInclude Include="PSOMnager.h" />
-    <ClInclude Include="SceneFactory.h" />
     <ClInclude Include="Score.h" />
     <ClInclude Include="SpeedMeter.h" />
   </ItemGroup>
