--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -60,11 +60,11 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rand.cpp" />
     <ClCompile Include="RotateArrow.cpp" />
-    <ClCompile Include="PSOMnager.cpp" />
-    <ClCompile Include="SceneFactory.cpp" />
     <ClCompile Include="Score.cpp" />
     <ClCompile Include="SpeedMeter.cpp" />
     <ClCompile Include="LightManager.cpp" />
+    <ClCompile Include="engine\base\PSOMnager.cpp" />
+    <ClCompile Include="engine\scene\SceneFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractSceneFactory.h" />
@@ -120,11 +120,11 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rand.h" />
     <ClInclude Include="RotateArrow.h" />
-    <ClInclude Include="PSOMnager.h" />
-    <ClInclude Include="SceneFactory.h" />
     <ClInclude Include="Score.h" />
     <ClInclude Include="SpeedMeter.h" />
     <ClInclude Include="LightManager.h" />
+    <ClInclude Include="engine\base\PSOMnager.h" />
+    <ClInclude Include="engine\scene\SceneFactory.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\shaders\Object3d\Object3d.hlsli" />
