--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -30,9 +30,6 @@
     <Filter Include="engine\3d">
       <UniqueIdentifier>{8e5f47b6-b7b6-45a7-a1fb-db3004412e5b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="engine\base">
-      <UniqueIdentifier>{db6c1153-66bc-4c64-8848-d9474d9029ec}</UniqueIdentifier>
-    </Filter>
     <Filter Include="engine\scene">
       <UniqueIdentifier>{d0b0505b-1c36-4229-bd35-512f3496fd14}</UniqueIdentifier>
     </Filter>
@@ -63,6 +60,12 @@
     </Filter>
     <Filter Include="シェーダー ファイル\sprite">
       <UniqueIdentifier>{59a31dd0-920a-45c1-997f-36c5996bd533}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="game">
+      <UniqueIdentifier>{f76b0b1a-9e8f-4aeb-bd20-7a22e666db50}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="engine\Tool\base">
+      <UniqueIdentifier>{db6c1153-66bc-4c64-8848-d9474d9029ec}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -100,19 +103,19 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="engine\base\WinApp.cpp">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClCompile>
     <ClCompile Include="engine\base\DXCommon.cpp">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClCompile>
     <ClCompile Include="engine\base\D3DResourceLeakChecker.cpp">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClCompile>
     <ClCompile Include="engine\Tool\StringUtility.cpp">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClCompile>
     <ClCompile Include="engine\Tool\Logger.cpp">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClCompile>
     <ClCompile Include="engine\2d\SpriteCommon.cpp">
       <Filter>engine\2d</Filter>
@@ -145,7 +148,7 @@
       <Filter>engine\Tool</Filter>
     </ClCompile>
     <ClCompile Include="engine\base\SrvManager.cpp">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClCompile>
     <ClCompile Include="engine\math\DrawFunction.cpp">
       <Filter>engine\math</Filter>
@@ -177,14 +180,17 @@
     <ClCompile Include="engine\scene\SceneManager.cpp">
       <Filter>engine\scene</Filter>
     </ClCompile>
-    <ClCompile Include="engine\scene\SceneFactory.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="engine\base\PSOMnager.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClCompile>
-    <ClCompile Include="LightManager.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="engine\Tool\LightManager.cpp">
+      <Filter>engine\Tool</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\scene\SceneFactory.cpp">
+      <Filter>engine\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Skydome.cpp">
+      <Filter>game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -225,19 +231,19 @@
       <Filter>engine\Input</Filter>
     </ClInclude>
     <ClInclude Include="engine\base\WinApp.h">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClInclude>
     <ClInclude Include="engine\base\DXCommon.h">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClInclude>
     <ClInclude Include="engine\base\D3DResourceLeakChecker.h">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClInclude>
     <ClInclude Include="engine\Tool\Logger.h">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClInclude>
     <ClInclude Include="engine\Tool\StringUtility.h">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClInclude>
     <ClInclude Include="engine\2d\SpriteCommon.h">
       <Filter>engine\2d</Filter>
@@ -270,7 +276,7 @@
       <Filter>engine\Tool</Filter>
     </ClInclude>
     <ClInclude Include="engine\base\SrvManager.h">
-      <Filter>engine\base</Filter>
+      <Filter>engine\Tool\base</Filter>
     </ClInclude>
     <ClInclude Include="engine\math\DrawFunction.h">
       <Filter>engine\math</Filter>
@@ -302,17 +308,20 @@
     <ClInclude Include="engine\scene\SceneManager.h">
       <Filter>engine\scene</Filter>
     </ClInclude>
-    <ClInclude Include="engine\Tool\AbstractSceneFactory.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="engine\base\PSOMnager.h">
+      <Filter>engine\Tool\base</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\Tool\LightManager.h">
+      <Filter>engine\Tool</Filter>
     </ClInclude>
     <ClInclude Include="engine\scene\SceneFactory.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>engine\scene</Filter>
     </ClInclude>
-    <ClInclude Include="engine\base\PSOMnager.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="engine\Tool\AbstractSceneFactory.h">
+      <Filter>engine\scene</Filter>
     </ClInclude>
-    <ClInclude Include="LightManager.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="Skydome.h">
+      <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
