カメラフェード

--- a/project/externals/imgui/my_imgui_settings.ini
+++ b/project/externals/imgui/my_imgui_settings.ini
@@ -19,8 +19,8 @@ Size=326,223
 Collapsed=0
 
 [Window][Settings]
-Pos=848,663
-Size=228,297
+Pos=901,276
+Size=228,293
 Collapsed=0
 
 [Window][light]
@@ -29,7 +29,22 @@ Size=169,241
 Collapsed=0
 
 [Window][Light Setting]
-Pos=386,346
+Pos=110,371
 Size=448,435
+Collapsed=0
+
+[Window][Settings skydome/Skydome.obj]
+Pos=59,64
+Size=236,207
+Collapsed=0
+
+[Window][Settings titleFont/titleFont.obj]
+Pos=859,493
+Size=222,123
+Collapsed=0
+
+[Window][Settings player.obj]
+Pos=972,313
+Size=240,176
 Collapsed=0
 
