--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -15,6 +15,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BubbleFade.cpp" />
+    <ClCompile Include="BubbleParticle.cpp" />
     <ClCompile Include="CourseWall.cpp" />
     <ClCompile Include="DriftEffect.cpp" />
     <ClCompile Include="engine\math\DrawFunction.cpp" />
@@ -101,6 +103,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractSceneFactory.h" />
+    <ClInclude Include="BubbleFade.h" />
+    <ClInclude Include="BubbleParticle.h" />
     <ClInclude Include="CourseWall.h" />
     <ClInclude Include="DriftEffect.h" />
     <ClInclude Include="engine\math\DrawFunction.h" />
