タイトルシーン

--- a/project/externals/imgui/my_imgui_settings.ini
+++ b/project/externals/imgui/my_imgui_settings.ini
@@ -34,7 +34,7 @@ Size=448,435
 Collapsed=0
 
 [Window][Settings skydome/Skydome.obj]
-Pos=393,279
+Pos=242,251
 Size=236,207
 Collapsed=0
 
@@ -46,5 +46,10 @@ Collapsed=0
 [Window][Settings player.obj]
 Pos=972,313
 Size=240,176
+Collapsed=0
+
+[Window][camera]
+Pos=42,118
+Size=215,128
 Collapsed=0
 
