--- a/project/externals/imgui/my_imgui_settings.ini
+++ b/project/externals/imgui/my_imgui_settings.ini
@@ -34,22 +34,32 @@ Size=448,435
 Collapsed=0
 
 [Window][Settings skydome/Skydome.obj]
-Pos=242,251
-Size=236,207
+Pos=-199,397
+Size=236,134
 Collapsed=0
 
 [Window][Settings titleFont/titleFont.obj]
-Pos=859,493
+Pos=1226,461
 Size=222,123
 Collapsed=0
 
 [Window][Settings player.obj]
-Pos=972,313
+Pos=1195,209
 Size=240,176
 Collapsed=0
 
 [Window][camera]
-Pos=42,118
-Size=215,128
+Pos=-150,123
+Size=215,100
+Collapsed=0
+
+[Window][Settings ]
+Pos=60,60
+Size=156,157
+Collapsed=0
+
+[Window][Settings terrain.obj]
+Pos=60,60
+Size=156,157
 Collapsed=0
 
