--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClCompile Include="Skydome.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="sorth\Fade.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="externals\imgui\imconfig.h">
@@ -322,6 +325,9 @@
     </ClInclude>
     <ClInclude Include="Skydome.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="sorth\Fade.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
