--- a/project/externals/imgui/my_imgui_settings.ini
+++ b/project/externals/imgui/my_imgui_settings.ini
@@ -14,7 +14,7 @@ Size=550,680
 Collapsed=0
 
 [Window][Debug]
-Pos=541,693
+Pos=329,437
 Size=326,223
 Collapsed=0
 
@@ -29,17 +29,17 @@ Size=169,241
 Collapsed=0
 
 [Window][Light Setting]
-Pos=110,371
+Pos=-274,282
 Size=448,435
 Collapsed=0
 
 [Window][Settings skydome/Skydome.obj]
-Pos=-199,397
+Pos=242,309
 Size=236,134
 Collapsed=0
 
 [Window][Settings titleFont/titleFont.obj]
-Pos=1226,461
+Pos=997,438
 Size=222,123
 Collapsed=0
 
@@ -49,7 +49,7 @@ Size=240,176
 Collapsed=0
 
 [Window][camera]
-Pos=-150,123
+Pos=1261,291
 Size=215,100
 Collapsed=0
 
@@ -61,5 +61,10 @@ Collapsed=0
 [Window][Settings terrain.obj]
 Pos=60,60
 Size=156,157
+Collapsed=0
+
+[Window][Stage Select]
+Pos=-8,530
+Size=302,196
 Collapsed=0
 
