--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -61,7 +61,7 @@
     <ClCompile Include="Skydome.cpp" />
     <ClCompile Include="sorth\Fade.cpp" />
     <ClCompile Include="StageManager.cpp" />
-    <ClCompile Include="StageSelectScene.cpp" />
+    <ClCompile Include="engine\scene\StageSelectScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\Tool\AbstractSceneFactory.h" />
@@ -109,7 +109,7 @@
     <ClInclude Include="Skydome.h" />
     <ClInclude Include="sorth\Fade.h" />
     <ClInclude Include="StageManager.h" />
-    <ClInclude Include="StageSelectScene.h" />
+    <ClInclude Include="engine\scene\StageSelectScene.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="externals\imgui\LICENSE.txt" />
