--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bitmappedfont.cpp" />
+    <ClCompile Include="BubbleParticle.cpp" />
     <ClCompile Include="CourseWall.cpp" />
     <ClCompile Include="DriftEffect.cpp" />
     <ClCompile Include="engine\base\PSOMnager.cpp" />
@@ -40,6 +41,7 @@
     <ClCompile Include="engine\GAME\Framework.cpp" />
     <ClCompile Include="engine\GAME\GameEngine.cpp" />
     <ClCompile Include="engine\scene\GameScene.cpp" />
+    <ClCompile Include="Fade.cpp" />
     <ClCompile Include="Goal.cpp" />
     <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="main.cpp">
@@ -78,6 +80,7 @@
   <ItemGroup>
     <ClInclude Include="AbstractSceneFactory.h" />
     <ClInclude Include="Bitmappedfont.h" />
+    <ClInclude Include="BubbleParticle.h" />
     <ClInclude Include="CourseWall.h" />
     <ClInclude Include="DriftEffect.h" />
     <ClInclude Include="engine\base\PSOMnager.h" />
@@ -120,6 +123,7 @@
     <ClInclude Include="engine\scene\Scene.h" />
     <ClInclude Include="engine\scene\SceneManager.h" />
     <ClInclude Include="engine\scene\TitleScene.h" />
+    <ClInclude Include="Fade.h" />
     <ClInclude Include="Goal.h" />
     <ClInclude Include="LightManager.h" />
     <ClInclude Include="MapChipField.h" />
