--- a/project/externals/imgui/my_imgui_settings.ini
+++ b/project/externals/imgui/my_imgui_settings.ini
@@ -14,7 +14,7 @@ Size=550,680
 Collapsed=0
 
 [Window][Debug]
-Pos=618,428
+Pos=850,74
 Size=326,223
 Collapsed=0
 
@@ -31,5 +31,10 @@ Collapsed=0
 [Window][Light Setting]
 Pos=643,153
 Size=448,435
+Collapsed=0
+
+[Window][Tutorial]
+Pos=76,123
+Size=279,87
 Collapsed=0
 
