--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -67,6 +67,8 @@
     <ClCompile Include="engine\scene\SceneFactory.cpp" />
     <ClCompile Include="Fade.cpp" />
     <ClCompile Include="BubbleParticle.cpp" />
+    <ClCompile Include="engine\scene\TutorialScene.cpp" />
+    <ClCompile Include="SelectScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractSceneFactory.h" />
@@ -129,6 +131,8 @@
     <ClInclude Include="engine\scene\SceneFactory.h" />
     <ClInclude Include="Fade.h" />
     <ClInclude Include="BubbleParticle.h" />
+    <ClInclude Include="engine\scene\TutorialScene.h" />
+    <ClInclude Include="SelectScene.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\shaders\Object3d\Object3d.hlsli" />
